Fix spacing for postal addresses in IE8
• improve markup
• remove govspeak from helper
• update styling

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -393,7 +393,3 @@ table {
     font-size: 11px;
   }
 }
-
-.address .vcard p {
-  margin-bottom: 0;
-}
